--- a/custom_components/facebook_messenger/manifest.json
+++ b/custom_components/facebook_messenger/manifest.json
@@ -1,3 +1,4 @@
+### 📁 manifest.json
 {
   "domain": "facebook_messenger",
   "name": "Facebook Messenger",
@@ -9,6 +10,6 @@
   "requirements": [],
   "quality_scale": "platinum",
   "iot_class": "cloud_push",
-  "loggers": [],
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "config_flow": true
 }
