--- a/custom_components/facebook_messenger/manifest.json
+++ b/custom_components/facebook_messenger/manifest.json
@@ -9,6 +9,6 @@
   "requirements": [],
   "quality_scale": "platinum",
   "iot_class": "cloud_push",
-  "version": "1.0.0",
-  "config_flow": true
+  "loggers": [],
+  "version": "1.1.0"
 }
