--- a/custom_components/facebook_messenger/manifest.json
+++ b/custom_components/facebook_messenger/manifest.json
@@ -7,8 +7,7 @@
   "after_dependencies": [],
   "codeowners": ["@hoducnguyenhd"],
   "requirements": [],
-  "quality_scale": "platinum",
-  "iot_class": "cloud_push",
-  "loggers": [],
-  "version": "1.1.0"
+  "version": "1.0.0",
+  "config_flow": true,
+  "iot_class": "cloud_push"
 }
