--- a/custom_components/facebook_messenger/manifest.json
+++ b/custom_components/facebook_messenger/manifest.json
@@ -1,14 +1,12 @@
 {
   "domain": "facebook_messenger",
   "name": "Facebook Messenger",
+  "version": "1.0.0",
   "documentation": "https://github.com/hoducnguyenhd/facebook_messenger",
   "issue_tracker": "https://github.com/hoducnguyenhd/facebook_messenger/issues",
-  "dependencies": [],
-  "after_dependencies": [],
-  "codeowners": ["@hoducnguyenhd"],
   "requirements": [],
-  "quality_scale": "platinum",
-  "iot_class": "cloud_push",
-  "loggers": [],
-  "version": "1.0.0"
+  "dependencies": [],
+  "codeowners": ["@hoducnguyenhd"],
+  "config_flow": true,
+  "iot_class": "cloud_push"
 }
